--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,9 +1,121 @@
-body {
-  font-family: 'Helvetica Neue', sans-serif;
-  text-align: center;
+@import "variables";
+@import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400;700;900&display=swap');
+body{
+  label, p, span, a, h1,h2,h3,h4, button,div{
+    font-family: $primary-font;
+    color: $black-color;
+  }
+  a{
+    text-decoration: none !important;
+  }
 }
-
-img {
-  display: block;
-  margin: 50px auto;
+.nav-link{
+  padding-right: 30px !important;
+  padding-left: 30px !important;
+}
+.secondary--text{
+  color: $secondary-color !important;
+}
+.logo{
+  max-width: 180px;
+  object-fit: cover;
+}
+.text--white{
+  color:white !important;
+}
+.button-white-outlined{
+  background-color: transparent;
+  border: 1px solid white;
+  padding-left: 40px !important;
+  padding-right: 40px !important;
+  color:white;
+  &:hover{
+    background-color: white;
+    color: $secondary-color !important;
+  }
+}
+.navbar{
+  width: 100%;
+}
+.liquid{
+  position: absolute;
+  width: 55vw;
+  background-size: contain;
+  top: 0px;
+  background-repeat: no-repeat;
+  background-position: top;
+  z-index: -1;
+}
+.underline{
+  left: 100vw;
+  transition: all 200ms;
+  opacity: 1;
+  background-color: white;
+  height: 2px;
+  position: absolute;
+  bottom:-2px;
+}
+.underline-hidden{
+  left: 100vw;
+  opacity: 0;
+}
+.text-muted{
+  opacity: 0.5;
+}
+@keyframes slideInTop {
+  0%{
+    opacity: 0;
+    top: -100px;
+  }
+  100%{
+    opacity: 1;
+    top: 0px;
+    background-color: white;
+  }
+}
+.scrolled{
+  background-color: white;
+  z-index: 10000;
+  position: fixed;
+  top: 0px;
+  -webkit-animation-name: scrollInTop;
+  -moz-animation-name: scrollInTop;
+  -o-animation-name: scrollInTop;
+  animation-name: scrollInTop;
+  animation-duration: 200ms;
+  animation-fill-mode: forwards;
+  transition: all 300ms;
+}
+.btn:not(.button-white-outlined){
+  font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+}
+.btn-primary{
+  background-color: $primary-color;
+  color: white !important;
+  border: none !important;
+  transition: all 300ms;
+  &:hover{
+    background-color: darken($primary-color, 2);
+    @include myShadow;
+  }
+}
+.main-banner{
+  .company-logo{
+    object-fit: contain;
+    margin-right: 20px;
+  }
+  .play-btn{
+    border: 1px solid rgba($secondary-color, 0.4);
+    padding: 10px 10px !important;
+    border-radius: 40px !important;
+    border-style: dashed;
+  }
+  height:100vh;
+  h1{
+    margin: 30px 0px;
+    font-size: 4.5rem;
+  }
 }
